[gd_scene load_steps=5 format=3 uid="uid://dssipk086l7yk"]

[ext_resource type="Script" uid="uid://cu81ys0ba2vg1" path="res://scripts/survey.gd" id="1_4vokp"]
[ext_resource type="FontFile" uid="uid://bfawprnajfbaw" path="res://Assets/Fonts/CleanPlate.fnt" id="2_2sqka"]
[ext_resource type="FontFile" uid="uid://durpk3530uu50" path="res://Assets/Fonts/BasicPupWhite.fnt" id="3_vfncv"]
[ext_resource type="FontFile" uid="uid://d3cs80n8io813" path="res://Assets/Fonts/CleanVictory.fnt" id="4_nj2e1"]

[node name="Survey" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vokp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8
offset_top = -140.6
offset_bottom = 340.6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nj2e1")
text = "Game Feedback Survey"
horizontal_alignment = 1

[node name="TopSpacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RatingLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "How likely are you to recommend this game to a friend?"

[node name="RatingContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RatingSlider" type="HSlider" parent="Panel/VBoxContainer/RatingContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 5.0

[node name="RatingValueLabel" type="Label" parent="Panel/VBoxContainer/RatingContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "5"

[node name="MiddleSpacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MostEnjoyedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "What did you enjoy most about the gameplay?"

[node name="MostEnjoyedComment" type="TextEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "Share what you liked most..."

[node name="LeastEnjoyedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "What did you enjoy least about the gameplay?"

[node name="LeastEnjoyedComment" type="TextEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "Share what you liked least..."

[node name="ControlsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "How intuitive were the controls?"

[node name="ControlsOption" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ClarityLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Did you always understand what to do next?"

[node name="ClarityOption" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "How was the difficulty and pacing?"

[node name="DifficultyOption" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BugsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Did you encounter any bugs, frustrations, or technical issues?"

[node name="BugsComment" type="TextEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "Describe any issues (optional)..."

[node name="VisualAudioLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "How would you rate the visual and audio quality?"

[node name="VisualAudioOption" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="GameTypesLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "What types of games do you usually play?"

[node name="GameTypesComment" type="TextEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "E.g. platformers, action, RPGs..."

[node name="ImprovementsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "What would you improve or change about the game?"

[node name="ImprovementsComment" type="TextEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "Your suggestions..."

[node name="BottomSpacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
text = "Back"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nj2e1")
text = "Submit"

[node name="FeedbackLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
